# vika-mct

./: CMakeLists.txt  Howto.txt  Makefile  NOTICE.txt  README.md  copyright.txt  pom.xml
core/: CMakeLists.txt
core/src/main/cpp/: CMakeLists.txt
core/src/main/cpp/didactics/core/: Api.hpp  Defines.hpp  Version.cpp  Version.hpp
core/src/main/cpp/didactics/core/chronos/: Clocker.cpp  Clocker.hpp  ClockerStatistics.cpp  ClockerStatistics.hpp  HighResolutionTimer.cpp  HighResolutionTimer.hpp  Time.cpp  Time.hpp  TimeoutGuard.cpp  TimeoutGuard.hpp  Timerseries.cpp  Timerseries.hpp  Timestamp.cpp  Timestamp.hpp
core/src/main/cpp/didactics/core/errorhandling/: Backtrace.cpp  Backtrace.hpp  ErrnoMapper.cpp  ErrnoMapper.hpp  Exceptions.cpp  Exceptions.hpp  Expected.cpp  Expected.hpp
core/src/main/cpp/didactics/core/exple/: BaseOfFiveDefaults.cpp  BaseOfFiveDefaults.hpp  BaseOfFiveDelete.cpp  BaseOfFiveDelete.hpp  CallbackHandler.cpp  Painter.cpp  Painter.hpp  Template.cpp  Template.hpp  Timer.cpp  Timer.hpp  Turtle.cpp  Turtle.hpp
core/src/main/cpp/didactics/core/log/: ColorStdOuputLogMsg.cpp  ColorStdOuputLogMsg.hpp  Helpers.cpp  Helpers.hpp  Logger.cpp  Logger.hpp
core/src/main/cpp/didactics/core/osal/: ScopeGuard.cpp  ScopeGuard.hpp  Semaphore.cpp  Semaphore.hpp
core/src/main/cpp/didactics/core/platform/: DefinesLinux.hpp
core/src/main/cpp/didactics/core/platform/linux/: ResourceLimit.cpp  ResourceLimit.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceUsage.cpp  ResourceUsage.hpp  SystemInfo.cpp  SystemInfo.hpp
core/src/main/cpp/didactics/core/utils/: AsyncTasks.cpp  AsyncTasks.hpp  GenericDataTypesStorage.cpp  GenericDataTypesStorage.hpp  Object.cpp  Object.hpp  Singleton.cpp  Singleton.hpp  SpinLock.cpp  SpinLock.hpp
core/src/main/cpp/didactics/core/utils/observable/: CallableCollection.cpp  CallableCollection.hpp  Collection.cpp  Collection.hpp  SharedSubscription.cpp  SharedSubscription.hpp  Subject.cpp  Subject.hpp  UniqueSubscription.cpp  UniqueSubscription.hpp
core/src/main/resources/: Api.hpp  Api.hpp.in  Common.cmake  CommonFindPackage.cmake  CommonLibrary.cmake  Defines.hpp  Defines.hpp.in  Version.hpp  Version.hpp.in  config.hpp.in  usConfig.h.in
core/src/test/cpp/: CMakeLists.txt
core/src/test/cpp/didactics/: SuiteOfTest.hpp  Test.cpp  Test.hpp  main.cpp
core/src/test/cpp/didactics/core/: Test.cpp  Test.hpp
core/src/test/cpp/didactics/core/chronos/: ClockerStatisticsTest.cpp  ClockerStatisticsTest.hpp  ClockerTest.cpp  ClockerTest.hpp  HighResolutionTimerTest.cpp  HighResolutionTimerTest.hpp  TimerseriesTest.cpp  TimerseriesTest.hpp  TimestampTest.cpp  TimestampTest.hpp
core/src/test/cpp/didactics/core/errorhandling/: BacktraceTest.cpp  BacktraceTest.hpp  ErrnoMapperMock.cpp  ErrnoMapperMock.hpp  ErrnoMapperTest.cpp  ErrnoMapperTest.hpp  ExceptionsTest.cpp  ExceptionsTest.hpp
core/src/test/cpp/didactics/core/exple/: CallbackHandlerTest.cpp  CallbackHandlerTest.hpp  DelegateMockTurtle.cpp  DelegateMockTurtle.hpp  ExtendedTurtleTest.cpp  ExtendedTurtleTest.hpp  FakeTurtle.cpp  FakeTurtle.hpp  MockTimer.cpp  MockTimer.hpp  MockTurtle.cpp  MockTurtle.hpp  PainterTest.cpp  PainterTest.hpp  SimpleTurtleTest.cpp  SimpleTurtleTest.hpp  TimerTest.cpp  TimerTest.hpp  TurtleTest.cpp  TurtleTest.hpp
core/src/test/cpp/didactics/core/log/: ColorStdOuputLogMsgTest.cpp  ColorStdOuputLogMsgTest.hpp  Hierarchy.cpp  Hierarchy.hpp  LoggerTest.cpp  LoggerTest.hpp
core/src/test/cpp/didactics/core/platform/linux/: ResourceLimitTest.cpp  ResourceLimitTest.hpp  ResourceManagerTest.cpp  ResourceManagerTest.hpp
core/src/test/cpp/didactics/core/utils/observable/: CollectionTest.cpp  CollectionTest.hpp
src/main/cpp/: CMakeLists.txt
src/main/cpp/didactics/: CMakeLists.txt  main.cpp
src/main/cpp/didactics/abst/: Shape.cpp  Shape.hpp
src/main/resources/: Api.hpp.in  Defines.hpp.in  DoxygenRules.txt  Version.cpp.in  Version.hpp.in
src/main/resources/macros/: Bullseye.cmake  CMakeSettings.cmake  CPPCheck.cmake  CodingStyle.cmake  CommonCoverage.cmake  CommonLibrary.cmake  CpplintWrapper.cmake  DefinePlatformSpecifc.cmake  Gcovr.cmake  GitInfo.cmake  PreventInSourceBuilds.cmake  SuperPedanticWarnings.cmake  aol.cmake  cpplint.cmake  lizard.cmake  macros.cmake
src/test/cpp/didactics/: CMakeLists.txt  mainTest.cpp
src/test/cpp/didactics/abst/: ShapeMock.cpp  ShapeMock.hpp  ShapeTest.cpp  ShapeTest.hpp
